<resources>
    <string name="app_name">Isteqdam</string>
    <string name="enterPhoneLabel">Enter Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="enterPhone">Enter Phone</string>
    <string name="wrongPhoneNumber">Wrong Phone Number</string>
    <string name="networkError">Network Error</string>
    <string name="serverError">Server Error</string>
    <string name="enterConfirmCode">Enter Confirm Code</string>
    <string name="resendCode">Resend Code</string>
    <string name="enterAnotherNumber">Enter Another Number</string>
    <string name="wrongConfirmCode">Wrong Confirm Code</string>
    <string name="msgSentSuccess">Confirmation Code Sent Successfully</string>
    <string name="signUp">SIGN UP</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email">Email</string>
    <string name="identity">ID Number</string>
    <string name="wrongFName">Wrong First Name</string>
    <string name="wrongLName">Wrong Last Name</string>
    <string name="wrongEmail">Wrong Email</string>
    <string name="signIn">SIGN IN</string>
    <string name="phone">PHONE </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="wrongUNameOrPass">Wrong User Name Or Password</string>
    <string name="blocked">You are blocked,please contact system admin.</string>
    <string name="noInterntConn">No Internet Connection,Check your connection and try again</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="homeTitle">Home</string>
    <string name="loremIpsum">Lorem Ipsum is simply.</string>
    <string name="searchWorkersBtn">Search Workers</string>
    <string name="sendRequestBtn">Send Request</string>
    <string name="myRequestBtn">My Requests</string>
    <string name="pendingRequestBtn">Pending Requests</string>

</resources>
