<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enterMobileBG"
    tools:context=".Controller.Register">

    <ImageView
        android:id="@+id/logoImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/viewTitleLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/signUp"
        android:textColor="@color/enterMobileTxtDarkBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImgView" />

    <TextView
        android:id="@+id/viewTitleBorder"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitleLbl" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/confirm_button"
        android:onClick="registerUser"
        android:padding="@dimen/_10sdp"
        android:text="@string/confirm"
        android:textColor="@color/enterMobileTxtDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerForm" />

    <LinearLayout
        android:id="@+id/registerForm"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitleBorder">

        <TextView
            android:id="@+id/firstNameLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/fName"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/confirmCodeField"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fNameIconImgView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_account_box_white_48" />

            <TextView
                android:id="@+id/fNameBorderLbl"
                android:layout_width="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/background_light" />

            <EditText
                android:id="@+id/fNameInputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@null"
                android:hint="@string/fName"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/lastNameLBl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/lName"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/confirmCodeField"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lastNameIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_assignment_white_48" />

            <TextView
                android:id="@+id/lastNameBorder"
                android:layout_width="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/background_light" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@null"
                android:ems="10"
                android:hint="@string/lName"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/emailLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/email"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/confirmCodeField"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_email_white_48" />

            <TextView
                android:id="@+id/emailBorder"
                android:layout_width="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/background_light" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@null"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/identityLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/identity"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/confirmCodeField"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/identityIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_lock_white_48" />

            <TextView
                android:id="@+id/identityBorder"
                android:layout_width="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/background_light" />

            <EditText
                android:id="@+id/identityInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@null"
                android:ems="10"
                android:hint="@string/identity"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>